fix: improve contrast for input borders

--- a/src/client/common/_colours.scss
+++ b/src/client/common/_colours.scss
@@ -4,7 +4,7 @@ $black: black;
 $off-black: #212121;
 $white: #fff;
 $off-white: #fffed7;
-$light-grey: #ececec;
+$light-grey: #bbb;
 $mid-grey: #797676;
 $blue: #0279c4;
 $yellow: #fdc626;
