--- a/src/client/common/card/card.scss
+++ b/src/client/common/card/card.scss
@@ -15,7 +15,7 @@
 
 .header {
   align-items: center;
-  background-color: colours.$light-grey;
+  background-color: #ececec;
   display: flex;
   padding: layout.$card-header-padding;
 }
